pequenos ajustes na API

--- a/SeguroAutomovel/Web.config
+++ b/SeguroAutomovel/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BDStrConn" connectionString="Data Source=localhost;User Id=sa;Password=hyemf23;Initial Catalog=SeguroAutomovel;Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="BDStrConn" connectionString="Data Source=localhost;User Id=sa;Password=n11nn11n;Initial Catalog=SeguroAutomovel;Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
